--- a/.gitignore
+++ b/.gitignore
@@ -421,3 +421,7 @@ FodyWeavers.xsd
 # Ignore database seed and migrations
 CareerPathfinder.Infrastructure/Data/DataSeeder.cs
 CareerPathfinder.Infrastructure/Data/Migrations/
+
+# Ignore appsettings files
+appsettings.json
+appsettings.*.json
